# chess

./: Cargo.toml  rustfmt.toml
src/: cube.rs  cube.wgsl  depth.rs  grid.rs  grid.wgsl  lib.rs  shader.wgsl  ui.rs
tests/: camera.rs
