[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "chess"
path = "bin/game.rs"

[dependencies]
wgpu = "0.19.0"
# logging
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
# Linear algebra library
glam = "0.24"
# gltf model loading
gltf = "1.4"
# Logging infrastructure
log = "0.4"
# argument parsing
pico-args = "0.5"
# profiling
profiling = "1"
# block on async functions
pollster = "0.3"
cfg-if = "1.0.0"
winit = "0.29.11"
# TODO: enable only in debug builds
anyhow = { version = "1.0.80", features = ["backtrace"] }

[dev-dependencies]
# rend3-test = "^0.3.0"
tokio = "1"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 28
compile_sdk_version = 28
