[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "chess"
path = "bin/game.rs"

[dependencies.discipline]
path = "../discipline/discipline"

[dependencies]
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
# gltf model loading
gltf = "1.4"
# Logging infrastructure
log = "0.4"
# argument parsing
pico-args = "0.5"
# profiling
profiling = "1"
# block on async functions
pollster = "0.3"
cfg-if = "1.0.0"
winit = "0.29.11"
# TODO: enable backtrace only in debug builds
anyhow = { version = "1.0.80", features = ["backtrace"] }
egui = "0.26.2"
egui-wgpu = "0.26.2"
egui-winit = "0.26.2"
bytemuck = "1.14.3"

# debug
glam = { version = "0.25.0", features = ["bytemuck"] }

[dev-dependencies]
# rend3-test = "^0.3.0"
tokio = "1"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 28
compile_sdk_version = 28
